# starlette-admin-fields

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  field_proposal.md
.github/workflows/: ci.yml  publish.yml  test.yml
docs/superpowers/plans/: 2026-05-11-e2e-tests.md
docs/superpowers/specs/: 2026-05-11-e2e-tests-design.md
example/: README.md  database.py  main.py
examples/fields/: README.md  main.py  requirements.txt
examples/kitchensink/: main.py  requirements.txt
src/starlette_admin_fields/: __init__.py  base.py
src/starlette_admin_fields/fields/: bootstrap_show_password.py  ckeditor4.py  ckeditor5.py  simplemde.py
starlette_admin_fields/: __init__.py  base.py  fields.py
starlette_admin_fields/fields/: __init__.py  bootstrap_show_password.py  ckeditor4.py  ckeditor5.py  simplemde.py
starlette_admin_fields/statics/css/: ckeditor5.css
starlette_admin_fields/statics/js/: form-extra.js
starlette_admin_fields/templates/: __placeholder__.html
starlette_admin_fields/templates/displays/: simplemde.html
starlette_admin_fields/templates/forms/: simplemde.html
tests/: test_init_admin.py
tests/e2e/: app.py  conftest.py  server.py  test_browser_render.py  test_browser_submit.py  test_http_roundtrip.py
tests/integration/: conftest.py  test_static_mount.py  test_template_loader.py
tests/smoke/: test_imports.py  test_init_admin.py
tests/unit/: test_bootstrap_show_password.py  test_ckeditor4.py  test_ckeditor5.py  test_simplemde.py
