[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starlette-admin-fields"
version = "0.1.0"
description = 'Extra fields to use with Starlette Admin'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "admin",
  "asgi",
  "bootstrap",
  "ckeditor",
  "ckeditor4",
  "ckeditor5",
  "dashboard",
  "editor",
  "fastapi",
  "fields",
  "form",
  "jinja2",
  "markdown",
  "password",
  "rich-text",
  "simplemde",
  "starlette-admin",
  "starlette",
  "template",
  "wysiwyg",
]
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: User Interfaces",
  "Typing :: Typed",
]
dependencies = ["starlette-admin"]

[project.urls]
Homepage = "https://github.com/hasansezertasan/starlette-admin-fields"
Documentation = "https://github.com/hasansezertasan/starlette-admin-fields#readme"
Source = "https://github.com/hasansezertasan/starlette-admin-fields"
Changelog = "https://hasansezertasan.github.io/starlette-admin-fields/changelog"
Issues = "https://github.com/hasansezertasan/starlette-admin-fields/issues"

[dependency-groups]
test = [
  "pytest>=9.0.0",
  "mypy==1.20.0",
  "httpx>=0.28.1",
]
cov = ["coverage[toml]>=7.0.0"]
doc = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=1.0.4",
  "mkdocs-static-i18n>=1.3.1",
]
dev = [
  "pre-commit>=4.6.0",
  "uvicorn>=0.46.0",
  {include-group = "test"},
  {include-group = "cov"},
  {include-group = "doc"},
]

[tool.coverage.report]
fail_under = 99
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "except NotImplementedError",
  "except ImportError",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["starlette_admin_fields", "tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "B008",   # function calls in argument defaults (needed for lazy_gettext etc.)
  "B905",   # `zip()` without explicit `strict=`
  "COM812", # trailing comma — conflicts with ruff-format
  "D",      # pydocstyle — opt in later when enforcing docstring style
  "E501",   # line too long — handled by formatter
  "N818",   # Exception name suffix — many fields are not Errors
]

[tool.ruff.lint.isort]
known-third-party = ["starlette_admin_fields"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "PLC0414"]
"examples/**" = ["N805", "N999", "RUF012"]
"tests/**" = [
  "ARG",    # unused fixture / parameter args common in pytest
  "PLR2004", # magic values in assertions
  "PT001",  # @pytest.fixture parens style
  "RUF012",
  "S101",   # assert is the whole point of tests
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true
